fix: rm some contents

--- a/docs/guides/guides.mdx
+++ b/docs/guides/guides.mdx
@@ -38,7 +38,7 @@ import ProductSection from '/docs/partials/_product-section.mdx';
   <Card
     title="No Code Integration"
     to="/"
-    description="Integrate Dyte into your project using an iFrame, eliminating the need for SDKs."
+    description="Integrate Dyte into your project using an iFrame, eliminating the need for Articles."
   />
   <Card
     title="Presets"
