--- a/docs/react-ui-kit/introduction.mdx
+++ b/docs/react-ui-kit/introduction.mdx
@@ -12,7 +12,7 @@ easy to integrate video and voice calls into any app or website within minutes.
 ## The Anatomy of React UI Kit
 
 The UI Kit is a design library of prebuilt UI components built on top of the
-core SDKs. Core SDK handles all the low-level media and network handling parts
+core Articles. Core SDK handles all the low-level media and network handling parts
 of a meeting and exposes simpler APIs to use. You can create a meeting object
 using the web-core components and pass it to the UI Kit components.
 
